Framing the basic structure of the website

--- a/about.html
+++ b/about.html
@@ -14,10 +14,10 @@
 		<a href="about.html">About</a>
 	</nav>
 	<header>
-		Welcome to the main page
+		About Us
 	</header>
 	<main>
-		Feel free to navigate through the links
+		blah blah blah
 	</main>
 
     <footer>
