--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,10 @@
 		<a href="about.html">About</a>
 	</nav>
 	<header>
-		Welcome to the main page
+		Contact Information
 	</header>
 	<main>
-		Feel free to navigate through the links
+		blah blah blah
 	</main>
 
     <footer>
