--- a/contact.html
+++ b/contact.html
@@ -4,31 +4,32 @@
 	<meta charset="utf-8">
 	<title>TSA Webmaster</title>
 	<meta name="description" content="TSA Webmaster Submission">
-	<meta name="author" content="CV TSA Team 903">
+	<meta name="author" content="CV TSA Team 904">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<nav>
+		<a href="index.html">Home</a>
 		<a href="news.html">News</a>
 		<a href="contact.html">Contact</a>
 		<a href="about.html">About</a>
+		<a href="references.html">References</a>
 	</nav>
-	<header>
-		Contact Information
-	</header>
 	<main>
-		blah blah blah
+		<header>
+			Welcome to the main page
+		</header>
+		Feel free to contact us if you have any questions!
+		<ul>
+			<li>Adil Aziz</li>
+			<li>Drake Ma</li>
+			<li>Ramsaket Gamini</li>
+			<li>Shunyu Tang</li>
+		</ul>
 	</main>
-
     <footer>
-        <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li style="float:right"><a class="active" href="about.html">About</a></li>
-        </ul>
+		© 2021 CV Webmaster Team 904
     </footer>
-
 	<script src="script.js"></script>
 </body>
 </html>
