--- a/index.html
+++ b/index.html
@@ -4,31 +4,78 @@
 	<meta charset="utf-8">
 	<title>TSA Webmaster</title>
 	<meta name="description" content="TSA Webmaster Submission">
-	<meta name="author" content="CV TSA Team 903">
+	<meta name="author" content="CV TSA Team 904">
 	<link rel="stylesheet" href="style.css">
+<!--
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+-->
 </head>
 <body>
 	<nav>
+		<a href="index.html">Home</a>
 		<a href="news.html">News</a>
 		<a href="contact.html">Contact</a>
 		<a href="about.html">About</a>
+        <a href="sources.html">Sources</a>
 	</nav>
-	<header>
-		Welcome to the main page
-	</header>
 	<main>
+		<header style="align center this thing">
+			Tour Alaska!
+		</header>
 		Feel free to navigate through the links
+
+            
+            <!-- lmao-->
+        <div class="schedule-container">
+        	<h1>Schedule</h1>
+        	<ul>
+            	<li>
+            		<div class="frame">
+                		<div class="hour">
+                			8
+                		</div>
+                		<div class="task">
+                	    	<a href="Events/fishing.html">Fishing</a>
+                		</div>
+                		<time>8:00 PM</time>
+            		</div>
+            	</li>
+            	<li>
+            		<div class="frame">
+                		<div class="hour">9</div>
+    	            	<div class="task">
+        	            	<a href="Events/sailing.html">Sailing</a>
+            	    	</div>
+                		<time>9:00 PM</time>
+        	    	</div>
+            	</li>
+                <li>
+            		<div class="frame">
+                		<div class="hour">10</div>
+    	            	<div class="task">
+        	            	<a href="Events/climbing.html">Climbing</a>
+            	    	</div>
+                		<time>10:00 PM</time>
+        	    	</div>
+            	</li>
+        	</ul>
+        </div>
 	</main>
-
+<!--
+    <div class="container">
+  <h2>Button</h2>
+  <p>The .btn-warning class indicates caution should be taken with this action:</p>            
+  <button type="button" class="btn btn-warning">Warning</button>
+</div>
+-->
     <footer>
-        <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li style="float:right"><a class="active" href="about.html">About</a></li>
-        </ul>
+        © 2021 CV Webmaster Team 904
     </footer>
-
-	<script src="script.js"></script>
+<!--
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
+-->
+<script src="script.js"></script>
 </body>
 </html>
