--- a/sources.html
+++ b/sources.html
@@ -13,13 +13,24 @@
 		<a href="news.html">News</a>
 		<a href="contact.html">Contact</a>
 		<a href="about.html">About</a>
-		<a href="references.html">References</a>
+		<a href="sources.html">Sources</a>
+    <a href="rest.html">Test</a>
 	</nav>
 	<main>
 		<header>
-			About Us
+			Sources
 		</header>
-		Feel free to navigate through the links
+		
+climbing
+https://alaskamountainguides.com/tour-page/rock-climbing/
+<br>
+fishing
+https://www.tikchiklodge.com/fishing/our-fishing-program
+<br>
+
+sailing
+https://alaskamagazine.com/authentic-alaska/activities/sailing-alaska/
+
 	</main>
 
     <footer>
