--- a/Events/climbing.html
+++ b/Events/climbing.html
@@ -5,21 +5,21 @@
 	<title>TSA Webmaster</title>
 	<meta name="description" content="TSA Webmaster Submission">
 	<meta name="author" content="CV TSA Team 904">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 	<nav>
-		<a href="index.html">Home</a>
-		<a href="news.html">News</a>
-		<a href="contact.html">Contact</a>
-		<a href="about.html">About</a>
-		<a href="references.html">References</a>
+		<a href="../index.html">Home</a>
+		<a href="../news.html">News</a>
+		<a href="../contact.html">Contact</a>
+		<a href="../about.html">About</a>
+		<a href="../references.html">References</a>
 	</nav>
 	<main>
 		<header>
-			About Us
+			Climbing Event
 		</header>
-		Feel free to navigate through the links
+        <img src="../Images/climbing.jpg">
 	</main>
 
     <footer>
