--- a/news.html
+++ b/news.html
@@ -4,29 +4,26 @@
 	<meta charset="utf-8">
 	<title>TSA Webmaster</title>
 	<meta name="description" content="TSA Webmaster Submission">
-	<meta name="author" content="CV TSA Team 903">
+	<meta name="author" content="CV TSA Team 904">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<nav>
+		<a href="index.html">Home</a>
 		<a href="news.html">News</a>
 		<a href="contact.html">Contact</a>
 		<a href="about.html">About</a>
+		<a href="sources.html">Sources</a>
 	</nav>
-	<header>
-		Latest News
-	</header>
 	<main>
-		blah blah blah
+		<header>
+			Latest News
+		</header>
+		No recent news
 	</main>
 
     <footer>
-        <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li style="float:right"><a class="active" href="about.html">About</a></li>
-        </ul>
+		© 2021 CV Webmaster Team 904
     </footer>
 
 	<script src="script.js"></script>
