--- a/Events/sailing.html
+++ b/Events/sailing.html
@@ -13,7 +13,8 @@
 		<a href="../news.html">News</a>
 		<a href="../contact.html">Contact</a>
 		<a href="../about.html">About</a>
-		<a href="../references.html">References</a>
+        <a href="../sources.html">Sources</a>
+
 	</nav>
 	<main>
 		<header>
