--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 		<a href="news.html">News</a>
 		<a href="contact.html">Contact</a>
 		<a href="about.html">About</a>
-        <a href="../sources.html">Sources</a>
+        <a href="sources.html">Sources</a>
 
 	</nav>
 	<main>
