update main page and about

--- a/contact.html
+++ b/contact.html
@@ -13,24 +13,26 @@
 		<a href="news.html">News</a>
 		<a href="contact.html">Contact</a>
 		<a href="about.html">About</a>
-        <a href="sources.html">Sources</a>
+    <a href="sources.html">Sources</a>
 
 	</nav>
 	<main>
 		<header>
-			Welcome to the main page
+			Contacts
 		</header>
-		Feel free to contact us if you have any questions!
-		<ul>
-			<li>Adil Aziz</li>
-			<li>Drake Ma</li>
-			<li>Ramsaket Gamini</li>
-			<li>Shunyu Tang</li>
-		</ul>
+		<summary>
+			Feel free to contact us if you have any questions!
+			<ul>
+				<li>Adil Aziz</li>
+				<li>Drake Ma</li>
+				<li>Ramsaket Gamini</li>
+				<li>Shunyu Tang</li>
+			</ul>
+		</summary>
 	</main>
-    <footer>
+  <footer>
 		© 2021 CV Webmaster Team 904
-    </footer>
+   </footer>
 	<script src="script.js"></script>
 </body>
 </html>
