--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
 	<meta name="description" content="TSA Webmaster Submission">
 	<meta name="author" content="CV TSA Team 904">
 	<link rel="stylesheet" href="style.css">
-<!--
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
--->
 </head>
 <body>
 	<nav>
@@ -18,64 +13,96 @@
 		<a href="news.html">News</a>
 		<a href="contact.html">Contact</a>
 		<a href="about.html">About</a>
-        <a href="sources.html">Sources</a>
+    <a href="sources.html">Sources</a>
 	</nav>
 	<main>
-		<header style="align center this thing">
+		<header>
 			Tour Alaska!
 		</header>
-		Feel free to navigate through the links
+		<summary>
+Our travel agent used this company to plan and book our Kodiak Brown Bear viewing trip. (Wanted to give him some business since COVID hit so hard) They were very slow with communication and confirmations. So slow that I asked my agent to cancel the trip with them. When they took so long I looked up booking the trip myself. They charged me an additional $2200.00 (outrangous) for booking our flights, hotel rooms and stay at Kodiak Brown Bear Center. I could have easily done it all myself!!!
 
-            
-            <!-- lmao-->
-        <div class="schedule-container">
-        	<h1>Schedule</h1>
-        	<ul>
-            	<li>
-            		<div class="frame">
-                		<div class="hour">
-                			8
-                		</div>
-                		<div class="task">
-                	    	<a href="Events/fishing.html">Fishing</a>
-                		</div>
-                		<time>8:00 PM</time>
-            		</div>
-            	</li>
-            	<li>
-            		<div class="frame">
-                		<div class="hour">9</div>
-    	            	<div class="task">
-        	            	<a href="Events/sailing.html">Sailing</a>
-            	    	</div>
-                		<time>9:00 PM</time>
-        	    	</div>
-            	</li>
-                <li>
-            		<div class="frame">
-                		<div class="hour">10</div>
-    	            	<div class="task">
-        	            	<a href="Events/climbing.html">Climbing</a>
-            	    	</div>
-                		<time>10:00 PM</time>
-        	    	</div>
-            	</li>
-        	</ul>
-        </div>
+I asked my travel agent to cancel because they had not sent me any confirmations or processed my credit card. They refused and while I was on the phone, with him giving me this information, they put my card through. The price of the trip is all lumped in one price so I had no idea they charged this much until I broke it down. I asked to have my flights in and out of Kodiak to be changed to earlier flights, so that if there was a weather issue we could hopefully catch later flight. They eventually rescheduled flight in but REFUSED to change flight out of Kodiak to Anchorage. I called Alaska airlines when we were in Kodiak and for $50 each the airline rescheduled our flight.
+
+We had an amazing time at the Kodiak Brown Bear Center and will definitely return.
+I will NEVER have any dealings with All Alaska Tours Again. They are only in it to make money and do NOT care about the clients wishes.
+		</summary>
+		<section>
+			<img src="Images/climbing.jpg" style = "right: 0px;">
+			<div class = "cover-left">
+				<aside style = "float: left;">
+			    <header>
+			     	Climbing
+			    </header>
+			    <summary>
+			     	The sport or activity of ascending mountains or cliffs; go or come up (a slope, incline, or staircase), especially by using the feet and sometimes the hands; ascend.
+			    </summary>
+		    </aside>
+			</div>
+		</section>
+		<section>
+			<img src="Images/fishing.jpg">
+			<div class = "cover-right">
+				<aside>
+			    <header>
+			     	Fishing
+			    </header>
+			    <summary>
+			     	The activity of catching fish, either for food or as a sport; catch or try to catch fish, typically by using a net or hook and line.
+			    </summary>
+		    </aside>
+			</div>
+		</section>
+		<section>
+			<img src="Images/sailing.jpg" style = "right: 0px;"">
+			<div class = "cover-left">
+				<aside style = "float: left;">
+			    <header>
+			     	Sailing
+			    </header>
+			    <summary>
+			     	The action of sailing in a ship or boat; travel in a boat with sails, especially as a sport or recreation.
+			    </summary>
+		    </aside>
+			</div>
+		</section>
+
+    <div class="schedule-container">
+    	<h1>Schedule</h1>
+    	<ul>
+        <li>
+        	<div class="frame">
+          	<div class="hour">8</div>
+          	<div class="task">
+          	  <a href="Events/fishing.html">Fishing</a>
+          	</div>
+          	<time>8:00 PM</time>
+        	</div>
+        </li>
+        <li>
+        	<div class="frame">
+          	<div class="hour">9</div>
+            <div class="task">
+    	        <a href="Events/sailing.html">Sailing</a>
+            </div>
+          	<time>9:00 PM</time>
+    	  	</div>
+        </li>
+          <li>
+        	<div class="frame">
+          	<div class="hour">10</div>
+            <div class="task">
+    	        <a href="Events/climbing.html">Climbing</a>
+            </div>
+          	<time>10:00 PM</time>
+    	  	</div>
+        </li>
+    	</ul>
+    </div>
 	</main>
-<!--
-    <div class="container">
-  <h2>Button</h2>
-  <p>The .btn-warning class indicates caution should be taken with this action:</p>            
-  <button type="button" class="btn btn-warning">Warning</button>
-</div>
--->
-    <footer>
-        © 2021 CV Webmaster Team 904
-    </footer>
-<!--
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js"></script>
--->
+  <footer>
+    © 2021 CV Webmaster Team 904
+  </footer>
 <script src="script.js"></script>
 </body>
 </html>
