--- a/news.html
+++ b/news.html
@@ -19,12 +19,13 @@
 		<header>
 			Latest News
 		</header>
-		No recent news
+		<summary>
+			No recent news
+		</summary>
 	</main>
-
-    <footer>
+  <footer>
 		© 2021 CV Webmaster Team 904
-    </footer>
+  </footer>
 
 	<script src="script.js"></script>
 </body>
