--- a/sources.html
+++ b/sources.html
@@ -14,28 +14,20 @@
 		<a href="contact.html">Contact</a>
 		<a href="about.html">About</a>
 		<a href="sources.html">Sources</a>
-    <a href="rest.html">Test</a>
 	</nav>
 	<main>
 		<header>
 			Sources
 		</header>
-		
-climbing
-https://alaskamountainguides.com/tour-page/rock-climbing/
-<br>
-fishing
-https://www.tikchiklodge.com/fishing/our-fishing-program
-<br>
-
-sailing
-https://alaskamagazine.com/authentic-alaska/activities/sailing-alaska/
-
+		<summary>
+			climbing: https://alaskamountainguides.com/tour-page/rock-climbing/<br>
+			fishing: https://www.tikchiklodge.com/fishing/our-fishing-program<br>
+			sailing: https://alaskamagazine.com/authentic-alaska/activities/sailing-alaska/<br>
+		</summary>
 	</main>
-
-    <footer>
+  <footer>
 		© 2021 CV Webmaster Team 904
-    </footer>
+  </footer>
 
 	<script src="script.js"></script>
 </body>
