improve climbing event page

--- a/Events/climbing.html
+++ b/Events/climbing.html
@@ -20,11 +20,49 @@
 		<header>
 			Climbing Event
 		</header>
-        <img src="../Images/climbing.jpg">
+        <section>
+			<img src="../Images/climbing.jpg" style = "right: 0px;">
+			<div class = "cover-left">
+				<aside style = "float: left;">
+			    <header>
+			     	Climbing
+			    </header>
+			    <summary>
+			     	The sport or activity of ascending mountains or cliffs; go or come up (a slope, incline, or staircase), especially by using the feet and sometimes the hands; ascend.
+			    </summary>
+		    </aside>
+			</div>
+		</section>
+        <section>
+			<img src="../Images/climbing_2.jpg">
+			<div class = "cover-right">
+				<aside>
+			    <header>
+			     	Fun for the whole family
+			    </header>
+			    <summary>
+			     	We have rock climbing walls for climbers of all levels. Just pull on your harness and get going!
+			    </summary>
+		    </aside>
+			</div>
+		</section>
+        <section>
+			<img src="../Images/climbing_3.png" style = "right: 0px;">
+			<div class = "cover-left">
+				<aside style = "float: left;">
+			    <header>
+			     	Celebrate
+			    </header>
+			    <summary>
+			     	Reaching the summit is no easy feat. Celebrate with your friends and enjoy and magnificent view from above!
+			    </summary>
+		    </aside>
+			</div>
+		</section>
 	</main>
 
     <footer>
-		© 2021 CV Webmaster Team 904
+		© 2022 CV Webmaster Team 904
     </footer>
 
 	<script src="script.js"></script>
