--- a/Events/fishing.html
+++ b/Events/fishing.html
@@ -20,12 +20,24 @@
 		<header>
 			Fishing Event
 		</header>
-        <img src="../Images/fishing.jpg">
+		<section>
+			<img src="../Images/fishing.jpg">
+			<div class = "cover-right">
+				<aside>
+			    <header>
+			     	Fishing
+			    </header>
+			    <summary>
+			     	The activity of catching fish, either for food or as a sport; catch or try to catch fish, typically by using a net or hook and line.
+			    </summary>
+		    </aside>
+			</div>
+		</section>
 
 	</main>
 
     <footer>
-		© 2021 CV Webmaster Team 904
+		© 2022 CV Webmaster Team 904
     </footer>
 
 	<script src="script.js"></script>
