--- a/Events/sailing.html
+++ b/Events/sailing.html
@@ -13,19 +13,30 @@
 		<a href="../news.html">News</a>
 		<a href="../contact.html">Contact</a>
 		<a href="../about.html">About</a>
-        <a href="../sources.html">Sources</a>
+    <a href="../sources.html">Sources</a>
 
 	</nav>
 	<main>
 		<header>
 			Sailing Event
 		</header>
-        <img src="../Images/sailing.jpg">
-
+		<section>
+			<img src="../Images/sailing.jpg" style = "right: 0px;"">
+			<div class = "cover-left">
+				<aside style = "float: left;">
+			    <header>
+			     	Sailing
+			    </header>
+			    <summary>
+			     	The action of sailing in a ship or boat; travel in a boat with sails, especially as a sport or recreation.
+			    </summary>
+		    </aside>
+			</div>
+		</section>
 	</main>
 
     <footer>
-		© 2021 CV Webmaster Team 904
+		© 2022 CV Webmaster Team 904
     </footer>
 
 	<script src="script.js"></script>
