--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ I will NEVER have any dealings with All Alaska Tours Again. They are only in it 
 			<div class = "cover-left">
 				<aside style = "float: left;">
 			    <header>
-			     	Climbing
+                    <a href="Events/climbing.html">Climbing</a>
 			    </header>
 			    <summary>
 			     	The sport or activity of ascending mountains or cliffs; go or come up (a slope, incline, or staircase), especially by using the feet and sometimes the hands; ascend.
@@ -45,7 +45,7 @@ I will NEVER have any dealings with All Alaska Tours Again. They are only in it 
 			<div class = "cover-right">
 				<aside>
 			    <header>
-			     	Fishing
+                    <a href="Events/fishing.html">Fishing</a>
 			    </header>
 			    <summary>
 			     	The activity of catching fish, either for food or as a sport; catch or try to catch fish, typically by using a net or hook and line.
@@ -58,7 +58,7 @@ I will NEVER have any dealings with All Alaska Tours Again. They are only in it 
 			<div class = "cover-left">
 				<aside style = "float: left;">
 			    <header>
-			     	Sailing
+                    <a href="Events/climbing.html">Sailing</a>
 			    </header>
 			    <summary>
 			     	The action of sailing in a ship or boat; travel in a boat with sails, especially as a sport or recreation.
@@ -101,7 +101,7 @@ I will NEVER have any dealings with All Alaska Tours Again. They are only in it 
     </div>
 	</main>
   <footer>
-    © 2021 CV Webmaster Team 904
+    © 2022 CV Webmaster Team 904
   </footer>
 <script src="script.js"></script>
 </body>
