--- a/sources.html
+++ b/sources.html
@@ -20,13 +20,13 @@
 			Sources
 		</header>
 		<summary>
-			climbing: https://alaskamountainguides.com/tour-page/rock-climbing/<br>
-			fishing: https://www.tikchiklodge.com/fishing/our-fishing-program<br>
-			sailing: https://alaskamagazine.com/authentic-alaska/activities/sailing-alaska/<br>
+			climbing: <a href="https://alaskamountainguides.com/tour-page/rock-climbing/">https://alaskamountainguides.com/tour-page/rock-climbing/</a><br>
+			fishing: <a href="https://www.tikchiklodge.com/fishing/our-fishing-program">https://www.tikchiklodge.com/fishing/our-fishing-program</a><br>
+			sailing: <a href="https://alaskamagazine.com/authentic-alaska/activities/sailing-alaska/">https://alaskamagazine.com/authentic-alaska/activities/sailing-alaska/</a><br>
 		</summary>
 	</main>
   <footer>
-		© 2021 CV Webmaster Team 904
+		© 2022 CV Webmaster Team 904
   </footer>
 
 	<script src="script.js"></script>
