add fishing parts

--- a/Events/climbing.html
+++ b/Events/climbing.html
@@ -21,7 +21,7 @@
 			Climbing Event
 		</header>
         <section>
-			<img src="../Images/climbing.jpg" style = "right: 0px;">
+			<img src="../Images/climbing.jpg" style = "right: 0; width: 50%;">
 			<div class = "cover-left">
 				<aside style = "float: left;">
 			    <header>
@@ -34,7 +34,7 @@
 			</div>
 		</section>
         <section>
-			<img src="../Images/climbing_2.jpg">
+			<img src="../Images/climbing_2.jpg" style="left: 0; width: 50%;">
 			<div class = "cover-right">
 				<aside>
 			    <header>
@@ -47,7 +47,7 @@
 			</div>
 		</section>
         <section>
-			<img src="../Images/climbing_3.png" style = "right: 0px;">
+			<img src="../Images/climbing_3.png" style = "right: 0; width: 50%;">
 			<div class = "cover-left">
 				<aside style = "float: left;">
 			    <header>
