--- a/Events/fishing.html
+++ b/Events/fishing.html
@@ -21,7 +21,7 @@
 			Fishing Event
 		</header>
 		<section>
-			<img src="../Images/fishing.jpg">
+			<img src="../Images/fishing.jpg" style="left: 0; width: 50%">
 			<div class = "cover-right">
 				<aside>
 			    <header>
@@ -33,7 +33,32 @@
 		    </aside>
 			</div>
 		</section>
-
+        <section>
+			<img src="../Images/fishing_2.png" style = "right: 0; width: 50%">
+			<div class = "cover-left">
+				<aside style = "float: left;">
+			    <header>
+			     	Choose your rod
+			    </header>
+			    <summary>
+			     	Whether you're an avid fisher or just like to fish for fun, we have a fishing rod for you. Just choose your option and start fishing!
+			    </summary>
+		    </aside>
+			</div>
+		</section>
+        <section>
+			<img src="../Images/ice_fishing.png" style="left: 0; width: 50%">
+			<div class = "cover-right">
+				<aside>
+			    <header>
+			     	Ice Fishing
+			    </header>
+			    <summary>
+			     	You can even fish on ice, which is uncommon in other areas. It's a very interesting experience which you should definitely try out!
+			    </summary>
+		    </aside>
+			</div>
+		</section>
 	</main>
 
     <footer>
