add sailing stuff

--- a/Events/sailing.html
+++ b/Events/sailing.html
@@ -33,6 +33,19 @@
 		    </aside>
 			</div>
 		</section>
+        <section>
+			<img src="../Images/sailing_2.png" style="left: 0; width: 50%">
+			<div class = "cover-right">
+				<aside>
+			    <header>
+			     	Enjoy the ride
+			    </header>
+			    <summary>
+			     	Splash around in your boat through the icy waters of Alaska. Don't know how to steer one? No problem! We have training programs and you can also call on one of our specialized sailors.
+			    </summary>
+		    </aside>
+			</div>
+		</section>
 	</main>
 
     <footer>
