--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ I will NEVER have any dealings with All Alaska Tours Again. They are only in it 
 			<div class = "cover-left">
 				<aside style = "float: left;">
 			    <header>
-                    <a href="Events/climbing.html">Sailing</a>
+                    <a href="Events/sailing.html">Sailing</a>
 			    </header>
 			    <summary>
 			     	The action of sailing in a ship or boat; travel in a boat with sails, especially as a sport or recreation.
