fix image stretching on event pages

--- a/Events/fishing.html
+++ b/Events/fishing.html
@@ -21,7 +21,7 @@
 			Fishing Event
 		</header>
 		<section>
-			<img src="../Images/fishing.jpg" style="left: 0; width: 50%">
+			<img src="../Images/fishing.jpg" style="left: 0; width: 50%;">
 			<div class = "cover-right">
 				<aside>
 			    <header>
@@ -34,7 +34,7 @@
 			</div>
 		</section>
         <section>
-			<img src="../Images/fishing_2.png" style = "right: 0; width: 50%">
+			<img src="../Images/fishing_2.png" style = "right: 0; width: 50%;">
 			<div class = "cover-left">
 				<aside style = "float: left;">
 			    <header>
@@ -47,7 +47,7 @@
 			</div>
 		</section>
         <section>
-			<img src="../Images/ice_fishing.png" style="left: 0; width: 50%">
+			<img src="../Images/ice_fishing.png" style="left: 0; width: 50%;">
 			<div class = "cover-right">
 				<aside>
 			    <header>
