--- a/Events/sailing.html
+++ b/Events/sailing.html
@@ -21,7 +21,7 @@
 			Sailing Event
 		</header>
 		<section>
-			<img src="../Images/sailing.jpg" style = "right: 0px;"">
+			<img src="../Images/sailing.jpg" style = "right: 0px; width: 50%;">
 			<div class = "cover-left">
 				<aside style = "float: left;">
 			    <header>
@@ -34,7 +34,7 @@
 			</div>
 		</section>
         <section>
-			<img src="../Images/sailing_2.png" style="left: 0; width: 50%">
+			<img src="../Images/sailing_2.png" style="left: 0; width: 50%;">
 			<div class = "cover-right">
 				<aside>
 			    <header>
