add custom tsa logo and favicon

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 	<meta name="description" content="TSA Webmaster Submission">
 	<meta name="author" content="CV TSA Team 904">
 	<link rel="stylesheet" href="style.css">
+    <link rel="icon" href="Images/logo.ico">
 </head>
 <body>
 	<nav>
+		<img src="Images/logo.png">
 		<a href="index.html">Home</a>
 		<a href="news.html">News</a>
 		<a href="contact.html">Contact</a>
@@ -28,7 +30,7 @@ We had an amazing time at the Kodiak Brown Bear Center and will definitely retur
 I will NEVER have any dealings with All Alaska Tours Again. They are only in it to make money and do NOT care about the clients wishes.
 		</summary>
 		<section>
-			<img src="Images/climbing.jpg" style = "right: 0px;">
+			<img src="Images/climbing.jpg" style = "right: 0; width: 50%;">
 			<div class = "cover-left">
 				<aside style = "float: left;">
 			    <header>
@@ -41,7 +43,7 @@ I will NEVER have any dealings with All Alaska Tours Again. They are only in it 
 			</div>
 		</section>
 		<section>
-			<img src="Images/fishing.jpg">
+			<img src="Images/fishing.jpg" style = "left: 0; width: 50%;">
 			<div class = "cover-right">
 				<aside>
 			    <header>
@@ -54,7 +56,7 @@ I will NEVER have any dealings with All Alaska Tours Again. They are only in it 
 			</div>
 		</section>
 		<section>
-			<img src="Images/sailing.jpg" style = "right: 0px;"">
+			<img src="Images/sailing.jpg" style = "right: 0; width: 50%;">
 			<div class = "cover-left">
 				<aside style = "float: left;">
 			    <header>
