--- a/Events/fishing.html
+++ b/Events/fishing.html
@@ -6,6 +6,7 @@
 	<meta name="description" content="TSA Webmaster Submission">
 	<meta name="author" content="CV TSA Team 904">
 	<link rel="stylesheet" href="../style.css">
+    <link rel="icon" href="../Images/logo.ico">
 </head>
 <body>
 	<nav>
