add pdfs, fix images on event pages

--- a/Events/climbing.html
+++ b/Events/climbing.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 	<nav>
+		<img src="../Images/logo.png">
 		<a href="../index.html">Home</a>
 		<a href="../news.html">News</a>
 		<a href="../contact.html">Contact</a>
@@ -21,44 +22,38 @@
 		<header>
 			Climbing Event
 		</header>
-        <section>
-			<img src="../Images/climbing.jpg" style = "right: 0; width: 50%;">
-			<div class = "cover-left">
-				<aside style = "float: left;">
-			    <header>
-			     	Climbing
-			    </header>
-			    <summary>
-			     	The sport or activity of ascending mountains or cliffs; go or come up (a slope, incline, or staircase), especially by using the feet and sometimes the hands; ascend.
-			    </summary>
-		    </aside>
-			</div>
+		<section class = "cover-left">
+			<img src="../Images/climbing.jpg">
+			<aside>
+		    <header>
+          Climbing
+			  </header>
+			  <summary>
+			   	The sport or activity of ascending mountains or cliffs; go or come up (a slope, incline, or staircase), especially by using the feet and sometimes the hands; ascend.
+		    </summary>
+	    </aside>
 		</section>
-        <section>
-			<img src="../Images/climbing_2.jpg" style="left: 0; width: 50%;">
-			<div class = "cover-right">
-				<aside>
-			    <header>
-			     	Fun for the whole family
-			    </header>
-			    <summary>
-			     	We have rock climbing walls for climbers of all levels. Just pull on your harness and get going!
-			    </summary>
-		    </aside>
-			</div>
+		<section class = "cover-right">
+			<img src="../Images/climbing_2.jpg">
+			<aside>
+			  <header>
+          Fun for the whole family
+			  </header>
+			  <summary>
+			   	We have rock climbing walls for climbers of all levels. Just pull on your harness and get going!
+			  </summary>
+		  </aside>
 		</section>
-        <section>
-			<img src="../Images/climbing_3.png" style = "right: 0; width: 50%;">
-			<div class = "cover-left">
-				<aside style = "float: left;">
-			    <header>
-			     	Celebrate
-			    </header>
-			    <summary>
-			     	Reaching the summit is no easy feat. Celebrate with your friends and enjoy and magnificent view from above!
-			    </summary>
-		    </aside>
-			</div>
+		<section class = "cover-left">
+			<img src="../Images/climbing_3.png">
+			<aside>
+			  <header>
+          Celebrate
+			  </header>
+			  <summary>
+			   	Reaching the summit is no easy feat. Celebrate with your friends and enjoy and magnificent view from above!
+			  </summary>
+		  </aside>
 		</section>
 	</main>
 
