--- a/Events/sailing.html
+++ b/Events/sailing.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 	<nav>
+		<img src="../Images/logo.png">
 		<a href="../index.html">Home</a>
 		<a href="../news.html">News</a>
 		<a href="../contact.html">Contact</a>
@@ -21,31 +22,27 @@
 		<header>
 			Sailing Event
 		</header>
-		<section>
-			<img src="../Images/sailing.jpg" style = "right: 0px; width: 50%;">
-			<div class = "cover-left">
-				<aside style = "float: left;">
-			    <header>
-			     	Sailing
-			    </header>
-			    <summary>
-			     	The action of sailing in a ship or boat; travel in a boat with sails, especially as a sport or recreation.
-			    </summary>
-		    </aside>
-			</div>
+		<section class = "cover-left">
+			<img src="../Images/sailing.jpg">
+			<aside>
+		    <header>
+          Sailing
+			  </header>
+			  <summary>
+			   	The action of sailing in a ship or boat; travel in a boat with sails, especially as a sport or recreation.
+		    </summary>
+	    </aside>
 		</section>
-        <section>
-			<img src="../Images/sailing_2.png" style="left: 0; width: 50%;">
-			<div class = "cover-right">
-				<aside>
-			    <header>
-			     	Enjoy the ride
-			    </header>
-			    <summary>
-			     	Splash around in your boat through the icy waters of Alaska. Don't know how to steer one? No problem! We have training programs and you can also call on one of our specialized sailors.
-			    </summary>
-		    </aside>
-			</div>
+		<section class = "cover-right">
+			<img src="../Images/sailing_2.png">
+			<aside>
+			  <header>
+          Enjoy the ride
+			  </header>
+			  <summary>
+			   	Splash around in your boat through the icy waters of Alaska. Don't know how to steer one? No problem! We have training programs and you can also call on one of our specialized sailors.
+			  </summary>
+		  </aside>
 		</section>
 	</main>
 
