--- a/index.html
+++ b/index.html
@@ -29,47 +29,41 @@ I asked my travel agent to cancel because they had not sent me any confirmations
 We had an amazing time at the Kodiak Brown Bear Center and will definitely return.
 I will NEVER have any dealings with All Alaska Tours Again. They are only in it to make money and do NOT care about the clients wishes.
 		</summary>
-		<section>
-			<img src="Images/climbing.jpg" style = "right: 0; width: 50%;">
-			<div class = "cover-left">
-				<aside style = "float: left;">
-			    <header>
-                    <a href="Events/climbing.html">Climbing</a>
-			    </header>
-			    <summary>
-			     	The sport or activity of ascending mountains or cliffs; go or come up (a slope, incline, or staircase), especially by using the feet and sometimes the hands; ascend.
-			    </summary>
-		    </aside>
-			</div>
+		<section class = "cover-left">
+			<img src="Images/climbing.jpg">
+			<aside>
+		    <header>
+          <a href="Events/climbing.html">Climbing</a>
+			  </header>
+			  <summary>
+			   	The sport or activity of ascending mountains or cliffs; go or come up (a slope, incline, or staircase), especially by using the feet and sometimes the hands; ascend.
+		    </summary>
+	    </aside>
 		</section>
-		<section>
-			<img src="Images/fishing.jpg" style = "left: 0; width: 50%;">
-			<div class = "cover-right">
-				<aside>
-			    <header>
-                    <a href="Events/fishing.html">Fishing</a>
-			    </header>
-			    <summary>
-			     	The activity of catching fish, either for food or as a sport; catch or try to catch fish, typically by using a net or hook and line.
-			    </summary>
-		    </aside>
-			</div>
+		<section class = "cover-right">
+			<img src="Images/fishing.jpg">
+			<aside>
+			  <header>
+          <a href="Events/fishing.html">Fishing</a>
+			  </header>
+			  <summary>
+			   	The activity of catching fish, either for food or as a sport; catch or try to catch fish, typically by using a net or hook and line.
+			  </summary>
+		  </aside>
 		</section>
-		<section>
-			<img src="Images/sailing.jpg" style = "right: 0; width: 50%;">
-			<div class = "cover-left">
-				<aside style = "float: left;">
-			    <header>
-                    <a href="Events/sailing.html">Sailing</a>
-			    </header>
-			    <summary>
-			     	The action of sailing in a ship or boat; travel in a boat with sails, especially as a sport or recreation.
-			    </summary>
-		    </aside>
-			</div>
+		<section class = "cover-left">
+			<img src="Images/sailing.jpg">
+			<aside>
+			  <header>
+          <a href="Events/sailing.html">Sailing</a>
+			  </header>
+			  <summary>
+			   	The action of sailing in a ship or boat; travel in a boat with sails, especially as a sport or recreation.
+			  </summary>
+		  </aside>
 		</section>
 
-    <div class="schedule-container">
+    <!-- <div class="schedule-container">
     	<h1>Schedule</h1>
     	<ul>
         <li>
@@ -100,7 +94,7 @@ I will NEVER have any dealings with All Alaska Tours Again. They are only in it 
     	  	</div>
         </li>
     	</ul>
-    </div>
+    </div> -->
 	</main>
   <footer>
     © 2022 CV Webmaster Team 904
