--- a/Events/fishing.html
+++ b/Events/fishing.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 	<nav>
+		<img src="../Images/logo.png">
 		<a href="../index.html">Home</a>
 		<a href="../news.html">News</a>
 		<a href="../contact.html">Contact</a>
@@ -21,44 +22,38 @@
 		<header>
 			Fishing Event
 		</header>
-		<section>
-			<img src="../Images/fishing.jpg" style="left: 0; width: 50%;">
-			<div class = "cover-right">
-				<aside>
-			    <header>
-			     	Fishing
-			    </header>
-			    <summary>
-			     	The activity of catching fish, either for food or as a sport; catch or try to catch fish, typically by using a net or hook and line.
-			    </summary>
-		    </aside>
-			</div>
+		<section class = "cover-left">
+			<img src="../Images/fishing.jpg">
+			<aside>
+		    <header>
+          Fishing
+			  </header>
+			  <summary>
+			   	The activity of catching fish, either for food or as a sport; catch or try to catch fish, typically by using a net or hook and line.
+		    </summary>
+	    </aside>
 		</section>
-        <section>
-			<img src="../Images/fishing_2.png" style = "right: 0; width: 50%;">
-			<div class = "cover-left">
-				<aside style = "float: left;">
-			    <header>
-			     	Choose your rod
-			    </header>
-			    <summary>
-			     	Whether you're an avid fisher or just like to fish for fun, we have a fishing rod for you. Just choose your option and start fishing!
-			    </summary>
-		    </aside>
-			</div>
+		<section class = "cover-right">
+			<img src="../Images/fishing_2.png">
+			<aside>
+			  <header>
+          Choose your rod
+			  </header>
+			  <summary>
+			   	Whether you're an avid fisher or just like to fish for fun, we have a fishing rod for you. Just choose your option and start fishing!
+			  </summary>
+		  </aside>
 		</section>
-        <section>
-			<img src="../Images/ice_fishing.png" style="left: 0; width: 50%;">
-			<div class = "cover-right">
-				<aside>
-			    <header>
-			     	Ice Fishing
-			    </header>
-			    <summary>
-			     	You can even fish on ice, which is uncommon in other areas. It's a very interesting experience which you should definitely try out!
-			    </summary>
-		    </aside>
-			</div>
+		<section class = "cover-left">
+			<img src="../Images/ice_fishing.jpg">
+			<aside>
+			  <header>
+          Ice Fishing
+			  </header>
+			  <summary>
+			   	You can even fish on ice, which is uncommon in other areas. It's a very interesting experience which you should definitely try out!
+			  </summary>
+		  </aside>
 		</section>
 	</main>
 
