--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 	<nav>
+		<img src="Images/logo.png">
 		<a href="index.html">Home</a>
 		<a href="news.html">News</a>
 		<a href="contact.html">Contact</a>
